--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ pytube~=10.7.2
 google-api-python-client
 google-auth-oauthlib
 google-auth-httplib2
+playsound~=1.2.2
+ffmpeg~=1.4
+opencv-python~=4.5.1.48
+selenium~=3.141.0
